[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/settings.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/main.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Game Menu.gd" type="Script" id=3]

[node name="Game Menu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main" parent="." instance=ExtResource( 2 )]

[node name="settings" parent="." instance=ExtResource( 1 )]
[connection signal="read_sound" from="." to="settings" method="_on_Game_Menu_read_sound"]
[connection signal="play_pressed" from="main" to="." method="_on_main_play_pressed"]
[connection signal="settings_pressed" from="main" to="." method="_on_main_settings_pressed"]
[connection signal="back_pressed" from="settings" to="." method="_on_settings_back_pressed"]
[connection signal="sound_pressed" from="settings" to="." method="_on_settings_sound_pressed"]
